/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package magma.migration.wifi;
option go_package = "types";


message WifiNetworkConfig {
    string vl_auth_server_addr = 4;
    int32 vl_auth_server_port = 5;
    string vl_auth_server_shared_secret = 6;
    repeated string ping_host_list = 7;
    int32 ping_num_packets = 8;
    int32 ping_timeout_secs = 9;
    string xwf_radius_server = 11;
    string xwf_config = 17;
    string xwf_dhcp_dns1 = 18;
    string xwf_dhcp_dns2 = 19;
    string xwf_radius_shared_secret = 20;
    int32 xwf_radius_auth_port = 21;
    int32 xwf_radius_acct_port = 22;
    string xwf_uam_secret = 23;
    string xwf_partner_name = 24;
    bool mgmt_vpn_enabled = 13;
    string mgmt_vpn_proto = 14;
    string mgmt_vpn_remote = 15;
    bool openr_enabled = 16;
    string ssid = 1;
    string password = 2;
    string vl_ssid = 3;
    bool xwf_enabled = 10;
    repeated string xwf_traffic_classes = 12;
    map<string, string> additional_props = 25;
}

message WifiGatewayConfig {
    string info = 1;
    string mesh_id = 2;
    double latitude = 3;
    double longitude = 4;
    bool wifi_disabled = 5;
    int32 mesh_rssi_threshold = 6;
    string client_channel = 7;
    bool use_override_xwf = 8;
    bool override_xwf_enabled = 9;
    string override_xwf_radius_server = 10;
    string override_xwf_config = 11;
    string override_xwf_dhcp_dns1 = 12;
    string override_xwf_dhcp_dns2 = 13;
    string override_xwf_radius_shared_secret = 14;
    int32 override_xwf_radius_auth_port = 15;
    int32 override_xwf_radius_acct_port = 16;
    string override_xwf_uam_secret = 17;
    string override_xwf_partner_name = 18;
    bool use_override_ssid = 19;
    string override_ssid = 20;
    string override_password = 21;
    bool is_production = 22;
    map<string, string> additional_props = 23;
}

