syntax = "proto3";

package magma.migration.wifi;
option go_package = "types";

message MeshNode {
    string name = 2;
}

message LegacyMeshConfig {
    string ssid = 1;
    string password = 2;
    string vl_ssid = 3;
    bool xwf_enabled = 7;
    string mesh_ssid = 10;
    int32 mesh_frequency = 11;
    string mesh_channel_type = 12;
    map<string, string> additional_props = 13;
}
